# miniprogram-write-teacher

./: README.md  box.psd  btn.psd  caution.psd  choose.psd  iconfinder_pencil_1055013.psd  ok.psd  star.psd
mpproj/: app.js  app.json  app.wxss  project.config.json
mpproj/pages/index/: index.js  index.json  index.wxml  index.wxss
mpproj/teacher/pages/index/: index.js  index.wxml  index.wxss  teacher.js  util.js
teacher/: .gitignore  ARTICLS  Cargo.toml  POEMS  build.cmd  replace.js
teacher/gendict/: Cargo.toml  OLD_STROKE.map  PINYIN  gb2312.data  strokes.bzip  strokes.bzip.txt  stylesheet0.css  stylesheet1.css  test.js  xml2json.js  《宋词三百首》.txt  唐诗三百首.txt  课文.txt
teacher/gendict/src/: main.rs
teacher/src/: main.rs  mmp.rs  pdollarplus.rs  platform.rs  teacher.rs  web.rs
